fix video cropping

--- a/css/style.css
+++ b/css/style.css
@@ -267,6 +267,7 @@ a:link {
 .slide a {
     pointer-events: cursor;
     overflow: auto;
+    padding-left: 50px;
 }
 
 .slide p {
@@ -323,8 +324,8 @@ a:link {
     height: 100%; 
     width: 100%; 
 	pointer-events: none;
-    margin-left: 50px;
-    margin-right: 50px;
+/*    margin-left: 50px;
+*/    margin-right: 90px;
 }
 
 #video-2 { 
